soprano (2.1.67+dfsg.1-2~pre1) UNRELEASED; urgency=low

  +++ Changes by Modestas Vainius:

  * More updates to debian/libsoprano4.symbols.in.
  * Rename debian/*.lintian to debian/*.lintian-overrides.
  * Bump debian/compat and debhelper build dependency to v7 (to get more
    sophisticated debian/tmp handling).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 24 Jan 2009 03:47:56 +0200

soprano (2.1.67+dfsg.1-1) experimental; urgency=low

  * New upstream development release.

  +++ Changes by Modestas Vainius:

  * Bump cmake build depend to 2.6.2.
  * Bump Standards-Version to 3.8.0: add README.source.
  * Switch to new installgen format.
  * Update install files.
  * Bump shlibs to 2.1.67.
  * Move DBus interface XMLs to libsoprano-dev, add appropriate replaces.
  * Build soprano with -fvisibility=hidden -fvisibility-inlines-hidden.
  * Add symbols file template for libsoprano4, build depend on
    pkg-kde-tools 0.3.1.



soprano (2.1.1+dfsg.1-1) unstable; urgency=high

  * New upstream release.
    - Bumps version number to 2.1.1 instead of 2.0.99 (prerelease).
    - Adds README file.
    - Removes old method from private backends/redland/redlandmodel.{cpp,h}.

  +++ Changes by Modestas Vainius:

  * Fix FTBFS (Closes: #506537).
  * Urgency high due to RC bugfix targetted for Lenny.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 22 Nov 2008 14:55:00 +0200

soprano (2.1+dfsg.1-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Modestas Vainius:

  * Bump shlibs to 2.1.
  * Add myself to uploaders.
  * Update debian/copyright.
  * Add prune-nonfree debian/rules target as a helper to get rid of jars and
    *.class files inside the tarball. 
  * Add dfsg suffix to the original tarball name. It was pruned.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 23 Jul 2008 17:26:55 +0300

soprano (2.0.98-2) unstable; urgency=low

  * Upload to unstable.