@@ -3,7 +3,7 @@ Section: libs
 Priority: extra
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <debian@pusling.com>, Ana Beatriz Guerrero Lopez <ana@debian.org>, Armin Berres <trigger+debian@space-based.de>, Fathi Boudra <fabo@debian.org>, Matthew Rosewarne <mrosewarne@inoutbox.com>, Modestas Vainius <modestas@vainius.eu>
-Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7), cmake (>= 2.6.2), quilt, pkg-kde-tools (>= 0.3.1),
+Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7), cmake (>= 2.6.2), quilt, pkg-kde-tools (>= 0.4),
  libclucene-dev, libqt4-dev (>= 4.4.0), librdf0-dev, doxygen, graphviz
 Standards-Version: 3.8.0
 Homepage: http://soprano.sourceforge.net
